--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,17 @@
   --primaryRGBA: rgba(0, 0, 0, 0.3);
   --mainGrey: #fafafa;
   --darkGrey: #5f5e5e;
+  --lightGrey: #cdcdcd;
+  --gradientGrey: linear-gradient(90deg, rgba(205,205,205,1) 0%, rgba(250,250,250,1) 100%);
   --mainWhite: #fff;
   --mainBlack: #222;
   --mainTransition: all 0.3s ease-in-out;
   --mainSpacing: 0.3rem;
+
+}
+
+#root{
+  overflow-x: hidden;
 }
 
 body {
@@ -30,8 +37,11 @@ body {
 
 .main-link {
   padding: 0.5rem 1rem;
+  min-width:255px;
+  text-align: center;
   background: var(--primaryColor);
   color: var(--mainWhite);
+  font-size:14px;
   display: inline-block;
   text-transform: uppercase;
   letter-spacing: var(--mainSpacing);
@@ -47,10 +57,6 @@ body {
   outline-color: var(--darkGrey);
 }
 
-.cart-icon:hover {
-  cursor: pointer;
-}
-
 .noselect {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -58,6 +64,22 @@ body {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+}
+
+/* Styled scrollbar */
+
+.styled-scrollbar::-webkit-scrollbar {
+  width: 8px;
+  position: absolute;
+}
+
+.styled-scrollbar::-webkit-scrollbar-track {
+  border-radius: 10px;
+}
+
+.styled-scrollbar::-webkit-scrollbar-thumb {
+  background: var(--primaryColor);
+  border-radius: 10px;
 }
 
 /* 
