--- a/src/App.css
+++ b/src/App.css
@@ -6,15 +6,18 @@
   --mainGrey: #fafafa;
   --darkGrey: #5f5e5e;
   --lightGrey: #cdcdcd;
-  --gradientGrey: linear-gradient(90deg, rgba(205,205,205,1) 0%, rgba(250,250,250,1) 100%);
+  --gradientGrey: linear-gradient(
+    90deg,
+    rgba(205, 205, 205, 1) 0%,
+    rgba(250, 250, 250, 1) 100%
+  );
   --mainWhite: #fff;
   --mainBlack: #222;
   --mainTransition: all 0.3s ease-in-out;
   --mainSpacing: 0.3rem;
-
 }
 
-#root{
+#root {
   overflow-x: hidden;
   overflow-y: hidden;
 }
@@ -38,11 +41,11 @@ body {
 
 .main-link {
   padding: 0.5rem 1rem;
-  min-width:255px;
+  min-width: 325px;
   text-align: center;
   background: var(--primaryColor);
   color: var(--mainWhite);
-  font-size:14px;
+  font-size: 14px;
   display: inline-block;
   text-transform: uppercase;
   letter-spacing: var(--mainSpacing);
@@ -83,7 +86,9 @@ body {
   border-radius: 10px;
 }
 
-/* 
-div[class^="ant"] {
-  color: #5fb7ea;
-} */
+/* Mobile version */
+@media only screen and (min-width: 320px) and (max-width: 991px) {
+  .main-link {
+    min-width: 255px;
+  }
+}
